TestCases/Errors/range_value/observations/sum_05_obs.spm
 obs   5-8   0.000477272727272727 
 error_value   5-8   0 
